Fix monthsBetween function to calculate months correctly

--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,7 @@ document.querySelectorAll('.copy-btn').forEach(btn => {
 
   function monthsBetween(start, end) {
     return (end.getFullYear() - start.getFullYear()) * 12 +
-           (end.getMonth() - start.getMonth()) + 1;
+           (end.getMonth() - start.getMonth()) ;
   }
 
   let totalMonths = 0;
